# cartel_api

./: Cargo.toml  README.md
src/: README.md  client.rs  error.rs  lib.rs
src/api/: advanced.rs  attacks.rs  basic.rs  battlestats.rs  cartel.rs  chat.rs  cooldowns.rs  inventory.rs  mod.rs  status.rs
src/model/: advanced.rs  attacks.rs  basic.rs  battlestats.rs  cartel.rs  chat.rs  cooldowns.rs  inventory.rs  mod.rs  range.rs  status.rs
src/tests/: advanced.rs  attacks.rs  basic.rs  battlestats.rs  cartel.rs  chat.rs  client.rs  cooldowns.rs  inventory.rs  inventory_advanced.rs  mod.rs  range.rs  status.rs
