[package]
name = "cartel_api"
version = "0.1.1"
edition = "2021"
description = "This crate attemps to provide a wrapper around the http://cartelempire.online/api"
authors = ["qez"]
repository = "https://github.com/qezTorn/cartel_api"
license = "MIT"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde-this-or-that = "0.4.2"
serde_derive = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"

[dev-dependancies]
tokio-test = "0.4.4"

[dev-dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio = { version = "1.40.0", features = ["macros"] }
